TASK - 49224 :Export_note_US_02: By clicking on export in three dot